# disk-persist

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: basic.rs
src/: lib.rs
