[package]
name = "disk-persist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
dirs = "4"
serde = "1.0"
thiserror = "1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
