[package]
name = "disk-persist"
version = "0.1.0"
edition = "2021"
authors = ["Grant Handy <grantshandy@gmail.com>"]
license = "MIT"
description = "A library that makes it very easy for your application to keep data inbetween executions"
homepage = "https://grantshandy.github.io/"
repository = "https://github.com/grantshandy/disk-persist/"
documentation = "https://docs.rs/disk-persist/"
keywords = ["disk", "persist", "cache", "save"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
dirs = "4"
serde = "1.0"
thiserror = "1"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
